Updated school and college names

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -28,7 +28,7 @@
             <thead>
                 <tr>
                     <th>Qualification</th>
-                    <th>Institution / Board</th>
+                    <th>Institution</th>
                     <th>Year</th>
                     <th>Result</th>
                 </tr>
@@ -42,13 +42,13 @@
                 </tr>
                 <tr>
                     <td>Intermediate (Class 12)</td>
-                    <td>State Board</td>
+                    <td>Narayana Jr College</td>
                     <td>2023</td>
                     <td><strong>95%</strong></td>
                 </tr>
                 <tr>
                     <td>SSC (Class 10)</td>
-                    <td>State Board</td>
+                    <td>St. Paul's High School</td>
                     <td>2021</td>
                     <td><strong>10 CGPA</strong></td>
                 </tr>
